Finalized all base interface

--- a/src/views/signup.html
+++ b/src/views/signup.html
@@ -19,8 +19,8 @@
             <input type="password" id="password" placeholder="Password" class="form-control" required>
             <label for="verifyPassword" class="sr-only">Confirm password</label>
             <input type="password" id="verifyPassword" placeholder="Confirm password" class="form-control" required>
-            <label for="name" class="sr-only">Password</label>
-            <input type="text" id="name" placeholder="Character name" class="form-control" required>
+            <label for="username" class="sr-only">Character name</label>
+            <input type="text" id="username" placeholder="Character name" class="form-control" required>
             <a class="btn btn-lg btn-primary d-block" onClick="signUp()">Sign in</a>
             <a href="/login">Already have an account? Login here</a>
         </form>
